[project]
name = "flow_calculator"
version = "0.1.0"
description = "flow_calculator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "docling>=2.25.0",
]

[project.scripts]
kickoff = "flow_calculator.main:main"
plot = "flow_calculator.main:plot"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
